fix(config): change description

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:       CSSSR
 author:      CSSSR
 email:       vostok@csssr.com
-description: CSSSR — веб-студия, специализирующая на фронтенд-разработке. HTML, CSS, JavaScript.
+description: CSSSR — веб-студия по фронтенд-разработке. HTML, CSS, JavaScript.
 
 # Optional features
 animated:           false
