--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,10 @@ paypal_url:
 flattr_button:
 
 # Build settings
-markdown:     redcarpet
-redcarpet:
-  extensions: ['smart', 'tables', 'with_toc_data']
+gems: [jekyll-paginate]
+markdown:     kramdown
+kramdown:
+  input: GFM
 permalink:    pretty
 paginate:     3
 sass:
