feat(contacts): change email

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title:       CSSSR
 author:      CSSSR
-email:       vostok@csssr.com
+email:       hr@csssr.io
 description: CSSSR — веб-студия по фронтенд-разработке. HTML, CSS, JavaScript.
 
 # Optional features
